--- a/Hamsternator/bin/.gitignore
+++ b/Hamsternator/bin/.gitignore
@@ -1,3 +1,8 @@
-/pictures/
-/Sprite.class
+/Background.class
+/Character.class
 /Cloud.class
+/EagHealth.class
+/Hamster.class
+/Runner.class
+/Sprite.class
+/pictures/
