Added start and endscreen, tried adding Hamhealth but it shows an error when it gets hit and doesnt print anymore(i tested the same thing with eagle health and it also doesnt work). I also tried adding audio but it didnt work and idk how to make it work.

--- a/Hamsternator/bin/.gitignore
+++ b/Hamsternator/bin/.gitignore
@@ -1,14 +1,8 @@
-/Background.class
-/Building.class
-/Character.class
-/Cloud.class
-/EagHealth.class
-/Hamster.class
-/PowerUp.class
-/Road.class
-/Runner.class
-/Sprite.class
 /pictures/
+/Title.class
+/RunnerTest.class
+/Runner.class
+/EndScreen.class
 /sounds/
-/Eagle.class
-/Obstacles.class
+/StartButton.class
+/HamHealth.class
