main game is done'ish, just needs touch ups

--- a/Hamsternator/bin/.gitignore
+++ b/Hamsternator/bin/.gitignore
@@ -1,8 +1,18 @@
-/pictures/
-/Title.class
-/RunnerTest.class
-/Runner.class
+/Background.class
+/Building.class
+/Character.class
+/Cloud.class
+/EagHealth.class
+/Eagle.class
 /EndScreen.class
-/sounds/
-/StartButton.class
 /HamHealth.class
+/Hamster.class
+/Obstacles.class
+/PowerUp.class
+/Road.class
+/Runner.class
+/Sprite.class
+/StartButton.class
+/Title.class
+/pictures/
+/sounds/
